// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.isValid() sets error 1`] = `"This field is required."`;

exports[`Field.makePrestine() empties error 1`] = `"This field is required."`;

exports[`Field.reset() empties error 1`] = `"This field is required."`;

exports[`Field.setAndValidate() sets and validates field 1`] = `"This field is required."`;

exports[`Field.setError() calls onError callback if exists 1`] = `
Array [
  "Nice error !!!",
  Field {
    "config": Object {
      "onError": [Function],
    },
    "currentValue": null,
    "defaultValue": null,
    "error": "Nice error !!!",
    "initialValue": null,
    "previousValue": null,
  },
]
`;

exports[`Form.isValid calls onError callback 1`] = `
Array [
  Object {
    "confirmPassword": null,
    "name": "\\"Name\\" is required.",
    "password": "\\"Password\\" is required.",
    "username": "\\"Username\\" is required.",
  },
  SignupForm {
    "_fields": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "config": Object {
      "onError": [Function],
    },
    "confirmPassword": ConfirmPasswordField {
      "config": Object {
        "field": "password",
      },
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "confirmPassword",
      "initialValue": null,
      "parent": [Circular],
      "previousValue": null,
    },
    "getNotified": true,
    "name": NameField {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": "\\"Name\\" is required.",
      "fieldName": "name",
      "initialValue": null,
      "parent": [Circular],
      "previousValue": null,
    },
    "password": PasswordField {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": "\\"Password\\" is required.",
      "fieldName": "password",
      "initialValue": null,
      "parent": [Circular],
      "previousValue": null,
    },
    "username": UsernameField {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": "\\"Username\\" is required.",
      "fieldName": "username",
      "initialValue": null,
      "parent": [Circular],
      "previousValue": null,
    },
  },
]
`;

exports[`Form.isValid sets error 1`] = `
Object {
  "confirmPassword": null,
  "name": "\\"Name\\" is required.",
  "password": "\\"Password\\" is required.",
  "username": "\\"Username\\" is required.",
}
`;

exports[`Form.isValid won't set error if true passed 1`] = `
Object {
  "confirmPassword": null,
  "name": null,
  "password": null,
  "username": null,
}
`;

exports[`Form.setError calls onError callback only once 1`] = `
Array [
  Object {
    "confirmPassword": null,
    "name": null,
    "password": "a error",
    "username": "a error",
  },
  SignupForm {
    "_fields": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "config": Object {
      "onError": [Function],
    },
    "confirmPassword": ConfirmPasswordField {
      "config": Object {
        "field": "password",
      },
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "confirmPassword",
      "initialValue": null,
      "parent": [Circular],
      "previousValue": null,
    },
    "getNotified": true,
    "name": NameField {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "name",
      "initialValue": null,
      "parent": [Circular],
      "previousValue": null,
    },
    "password": PasswordField {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": "a error",
      "fieldName": "password",
      "initialValue": null,
      "parent": [Circular],
      "previousValue": null,
    },
    "username": UsernameField {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": "a error",
      "fieldName": "username",
      "initialValue": null,
      "parent": [Circular],
      "previousValue": null,
    },
  },
]
`;

exports[`Form.triggerOnChange calls callback with value and form instance 1`] = `
Array [
  Object {
    "confirmPassword": null,
    "name": null,
    "password": null,
    "username": "ausername",
  },
  SignupForm {
    "_fields": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "config": Object {
      "onChange": [Function],
    },
    "confirmPassword": ConfirmPasswordField {
      "config": Object {
        "field": "password",
      },
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "confirmPassword",
      "initialValue": null,
      "parent": [Circular],
      "previousValue": null,
    },
    "getNotified": true,
    "name": NameField {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "name",
      "initialValue": null,
      "parent": [Circular],
      "previousValue": null,
    },
    "password": PasswordField {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "password",
      "initialValue": null,
      "parent": [Circular],
      "previousValue": null,
    },
    "username": UsernameField {
      "config": Object {},
      "currentValue": "ausername",
      "defaultValue": null,
      "error": null,
      "fieldName": "username",
      "initialValue": null,
      "parent": [Circular],
      "previousValue": null,
    },
  },
]
`;
